# raytracing-example

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
docs/html/: annotated.html  annotated_dup.js  camera_8cpp.html  camera_8h.html  camera_8h.js  camera_8h_source.html  class_camera-members.html  class_camera.html  class_camera.js  class_dielectric-members.html  class_dielectric.html  class_dielectric.js  class_intersection-members.html  class_intersection.html  class_intersection.js  class_interval-members.html  class_interval.html  class_interval.js  class_lambertian-members.html  class_lambertian.html  class_lambertian.js  class_material-members.html  class_material.html  class_material.js  class_metal-members.html  class_metal.html  class_metal.js  class_ray-members.html  class_ray.html  class_ray.js  class_renderer-members.html  class_renderer.html  class_renderer.js  class_shape-members.html  class_shape.html  class_shape.js  class_shape_container-members.html  class_shape_container.html  class_shape_container.js  class_sphere-members.html  (+95 more)
docs/latex/: annotated.tex  camera_8cpp.tex  camera_8h.tex  camera_8h_source.tex  class_camera.tex  class_dielectric.eps  class_dielectric.tex  class_intersection.tex  class_interval.tex  class_lambertian.eps  class_lambertian.tex  class_material.eps  class_material.tex  class_metal.eps  class_metal.tex  class_ray.tex  class_renderer.tex  class_shape.eps  class_shape.tex  class_shape_container.eps  class_shape_container.tex  class_sphere.tex  class_vec3.tex  classutils_1_1_input_helper.tex  dielectric_8cpp.tex  dielectric_8h.tex  dielectric_8h_source.tex  dir_2a66d027b5dc008be9eca04d80b0ad73.tex  dir_313caf1132e152dd9b58bea13a4052ca.tex  dir_34519bff5ae72130fe71a8620cbf1fc0.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_79fa9b12a48436e6d1fb80a586e19af1.tex  dir_7bc5e25958a2fb25a8561f3aa0def6c5.tex  dir_d178eba083707183efa68030cdc9e861.tex  dir_e582b7575c15927dbdb41eeaf4c9d0a5.tex  fileio_8cpp.tex  files.tex  hierarchy.tex  intersection_8h.tex  intersection_8h_source.tex  (+31 more)
src/: main.cpp
src/Shape/: shape.h  shape_container.h
src/camera/: Camera.h  (+3 more)
tests/: CMakeLists.txt  test_input.txt  utils.test.cpp
(+132 files in other folders)
